# kognis-core

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FUTURE_WORK.md  GEMINI.md  INSTALL.md  LICENSE  M-000-split-master-docs.md  MIGRATION.md  MILESTONE_TEMPLATE.md  README.md  SECURITY.md  YAML_EXAMPLES.md  hello.go  verify_leak.py
sdk/python/: README.md  pyproject.toml
sdk/python/.omc/: project-memory.json
sdk/python/.omc/state/: last-tool-error.json
sdk/python/.omc/state/checkpoints/: checkpoint-2026-04-22T21-10-16-372Z.json
sdk/python/examples/cognitive_philosopher/: main.py  manifest.yaml
sdk/python/examples/cognitive_philosopher/logic/: syllogizer.py
sdk/python/examples/cognitive_philosopher/models/: belief_network.py
sdk/python/examples/echo_chat/: main.py  manifest.yaml
sdk/python/examples/hello_agent/: main.py  plugin.yaml
sdk/python/examples/hello_world/: main.py  manifest.yaml
sdk/python/examples/memory_vault/: main.py  manifest.yaml
sdk/python/examples/sensory_auditory/: buffer.py  main.py  manifest.yaml  processor.py
sdk/python/examples/utility_bridge/: main.py  manifest.yaml
sdk/python/kognis_sdk/: __init__.py  capability.py  context_budget.py  control_plane.py  envelope.py  eventbus.py  health.py  manifest.py  plugin.py  state_store.py  stateful_agent.py  tool_bridge.py
sdk/python/kognis_sdk/testing/: __init__.py
sdk/python/tests/: test_capability_toolbridge_budget.py  test_control_plane.py  test_envelope.py  test_eventbus.py  test_health_statestore_testing.py  test_manifest.py  test_plugin_and_agent.py
(+140 files in other folders)
